--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div class="bg_heart"></div>
-    <embed src="Bruno_Mars_-_Just_The_Way_You_Are_(Jesusful.com).mp3" loop="true" autostart="true" width="2" height="0">
+
     <div class="container">
       <h2 id="text1"></h2>
-
     </div>
+
+    <audio controls autoplay>
+      <source src="Bruno_Mars_-_Just_The_Way_You_Are_(Jesusful.com).mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
 
     <script src="script.js"></script>
   </body>
