--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   </head>
 
   <body>
+    <audio autoplay>
+      <source src="Bruno_Mars_-_Just_The_Way_You_Are_(Jesusful.com).mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
     <div class="bg_heart"></div>
 
     <div class="container">
       <h2 id="text1"></h2>
     </div>
 
-    <audio controls autoplay>
-      <source src="Bruno_Mars_-_Just_The_Way_You_Are_(Jesusful.com).mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-    </audio>
+    
 
     <script src="script.js"></script>
   </body>
