--- a/index.html
+++ b/index.html
@@ -2,25 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Happy birthday</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-
   <body>
-    <audio autoplay>
-      <source src="Bruno_Mars_-_Just_The_Way_You_Are_(Jesusful.com).mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-    </audio>
-    <div class="bg_heart"></div>
+    <!-- partial:index.partial.html -->
+    <html>
+      <head>
+        <title>love you</title>
+      </head>
+      <body>
+        <audio autoplay loop="loop">
+          <source src="./music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+        <div class="bg_heart"></div>
 
-    <div class="container">
-      <h2 id="text1"></h2>
-    </div>
+        <div class="container">
+          <h2 id="text1"></h2>
+        </div>
+        
+      </body>
+    </html>
+    <!-- partial -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.min.js"></script>
 
-    
-
-    <script src="script.js"></script>
   </body>
 </html>
